feat(stage2): add circuit breaker and network isolation for tests
- Add exceptions.py with AuthenticationError, CircuitBreakerOpen, RateLimitError
- Add CircuitBreaker class to stop after 5 consecutive API failures
- Handle 401/403 as fatal errors (immediate stop, single request)
- Add RateLimiter with minimum delay between all requests
- Block socket.connect in tests via autouse fixture
- Add test_network_blocking.py proving network isolation works
- Add test_infrastructure.py with 26 tests for error handling
- All 80 tests pass with zero network access

BREAKING CHANGE: CachedHttpClient now requires circuit_breaker parameter

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,20 @@
-# Companies House API key (username in HTTP Basic Auth, blank password)
-CH_API_KEY=
+# Environment Configuration
 
-# Pipeline settings
-CH_SLEEP_SECONDS=0.2
-CH_MIN_MATCH_SCORE=0.72
-CH_SEARCH_LIMIT=10
+# Companies House API (required for Stage 2)
+# Get your key at: https://developer.company-information.service.gov.uk/
+CH_API_KEY=your_api_key_here
+
+# Rate limiting and politeness
+CH_SLEEP_SECONDS=0.5          # Delay between API requests
+CH_MAX_RPM=500                # Max requests per minute (CH limit is 600)
+
+# Matching thresholds
+CH_MIN_MATCH_SCORE=0.72       # Minimum similarity to accept a match
+CH_SEARCH_LIMIT=5             # Number of search results to consider
 
 # Stage 3 scoring
-TECH_SCORE_THRESHOLD=0.55
+TECH_SCORE_THRESHOLD=0.55     # Minimum tech-likelihood score for shortlist
+
+# Geographic filtering (optional, comma-separated)
+# GEO_FILTER_REGIONS=London,Manchester,Bristol
+# GEO_FILTER_POSTCODES=EC,SW,W1
