feat: migrate to uv tooling and harden pipeline

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@ CH_API_KEY=your_api_key_here
 # Rate limiting and politeness
 CH_SLEEP_SECONDS=0.5          # Delay between API requests
 CH_MAX_RPM=500                # Max requests per minute (CH limit is 600)
+CH_TIMEOUT_SECONDS=30         # HTTP timeout in seconds
+CH_MAX_RETRIES=3              # Retry attempts for transient errors
+CH_BACKOFF_FACTOR=0.5         # Exponential backoff factor
+CH_BACKOFF_MAX_SECONDS=60     # Max backoff delay
+CH_BACKOFF_JITTER_SECONDS=0.1 # Random jitter added to backoff
+CH_CIRCUIT_BREAKER_THRESHOLD=5  # Failures before opening breaker
+CH_CIRCUIT_BREAKER_TIMEOUT_SECONDS=60  # Seconds before half-open probe
 
 # Matching thresholds
 CH_MIN_MATCH_SCORE=0.72       # Minimum similarity to accept a match
