--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,32 @@ dev = [
 
 [project.scripts]
 uk-sponsor = "uk_sponsor_pipeline.cli:app"
+lint = "uk_sponsor_pipeline.devtools:lint"
+format = "uk_sponsor_pipeline.devtools:format_code"
+format-check = "uk_sponsor_pipeline.devtools:format_check"
+typecheck = "uk_sponsor_pipeline.devtools:typecheck"
+test = "uk_sponsor_pipeline.devtools:test"
+coverage = "uk_sponsor_pipeline.devtools:coverage"
+
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.uv]
 # If you use uv: `uv sync` will install deps from this file.
+package = true
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
 ignore = ["E501"]
 
@@ -56,4 +75,3 @@ strict = true
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
-
