feat: add ADRs, quality gates, and docs

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ CH_BACKOFF_MAX_SECONDS=60     # Max backoff delay
 CH_BACKOFF_JITTER_SECONDS=0.1 # Random jitter added to backoff
 CH_CIRCUIT_BREAKER_THRESHOLD=5  # Failures before opening breaker
 CH_CIRCUIT_BREAKER_TIMEOUT_SECONDS=60  # Seconds before half-open probe
+CH_BATCH_SIZE=250             # Organisations per batch (incremental output)
 
 # Matching thresholds
 CH_MIN_MATCH_SCORE=0.72       # Minimum similarity to accept a match
