--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dev = [
   "pytest-cov>=4.1",
   "mypy>=1.8",
   "ruff>=0.3",
+  "pre-commit>=3.7",
   "pandas-stubs>=2.2",
   "types-requests>=2.31",
   "types-beautifulsoup4>=4.12",
@@ -35,6 +36,7 @@ format-check = "uk_sponsor_pipeline.devtools:format_check"
 typecheck = "uk_sponsor_pipeline.devtools:typecheck"
 test = "uk_sponsor_pipeline.devtools:test"
 coverage = "uk_sponsor_pipeline.devtools:coverage"
+check = "uk_sponsor_pipeline.devtools:check"
 
 [build-system]
 requires = ["setuptools>=68", "wheel"]
