feat: complete scoring domain extraction and refine roadmap
- move Stage 3 scoring rules into domain/scoring and update stage wrapper
- move Stage 1 aggregation rules into domain/sponsor_register and add helpers
- add IO contracts and validation to keep infrastructure boundary-neutral
- add location alias reference file and stage-usage scan report
- update refactor plan with ETL/usage split, semantic naming scheme, and acceptance criteria
- expand tests for domain scoring/validation and share Stage 2 row helpers
- update ADRs and README to reflect domain extraction and architecture
- add import-linter contract for domain → application and tidy CLI/config docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,12 @@ source_modules = ["uk_sponsor_pipeline.domain"]
 forbidden_modules = ["uk_sponsor_pipeline.infrastructure"]
 
 [[tool.importlinter.contracts]]
+name = "Domain must not import application"
+type = "forbidden"
+source_modules = ["uk_sponsor_pipeline.domain"]
+forbidden_modules = ["uk_sponsor_pipeline.application"]
+
+[[tool.importlinter.contracts]]
 name = "Domain must not import CLI or stages"
 type = "forbidden"
 source_modules = ["uk_sponsor_pipeline.domain"]
