--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ lint = "uk_sponsor_pipeline.devtools:lint"
 format = "uk_sponsor_pipeline.devtools:format_code"
 format-check = "uk_sponsor_pipeline.devtools:format_check"
 typecheck = "uk_sponsor_pipeline.devtools:typecheck"
+spelling-check = "uk_sponsor_pipeline.devtools:spelling_check"
 test = "uk_sponsor_pipeline.devtools:test"
 coverage = "uk_sponsor_pipeline.devtools:coverage"
 check = "uk_sponsor_pipeline.devtools:check"
@@ -40,6 +41,7 @@ dev = [
   "pytest-cov>=7.0.0",
   "pyright>=1.1.408",
   "ruff>=0.14.14",
+  "breame>=0.1.2",
   "import-linter>=2.9",
   "pre-commit>=4.5.1",
   "pandas-stubs>=2.3.3.260113",
@@ -57,13 +59,28 @@ target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP", "ANN"]
+extend-select = ["PGH003", "PGH004", "RUF100", "RUF101"]
 # If you use ruff-format, E501 is typically redundant;
-
-[tool.ruff.lint.per-file-ignores]
-"tests/**/*.py" = ["ANN"]
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.us_spelling]
+include_extensions = [".md", ".py", ".toml", ".txt", ".yaml", ".yml"]
+exclude_dirs = [
+  ".git",
+  ".import_linter_cache",
+  ".mypy_cache",
+  ".pytest_cache",
+  ".ruff_cache",
+  ".venv",
+  "__pycache__",
+  "data",
+  "dist",
+  "reports",
+]
+exclude_files = [".coverage", "uv.lock"]
+include_list = true
 
 [tool.ruff.lint.mccabe]
 max-complexity = 45
