refactor(linter): convert americanism check to reusable uwotm8-linter action
- Move check_us_spelling.py to src/uk_sponsor_pipeline/devtools/uwotm8_linter.py
- Add src/uk_sponsor_pipeline/devtools/__init__.py as package module
- Create .github/actions/uwotm8-linter/action.yml for local composite action
- Add .github/workflows/spelling.yml for CI integration
- Update devtools entrypoints to use python -m invocation
- Add sensible defaults (no pyproject.toml required)

Type safety improvements:
- Create stubs/breame/ with type annotations for breame package
- Refactor AST body access to use proper type narrowing (isinstance)
- Use TypeGuard functions to narrow object to list[object]/dict[object, object]
  (solves the isinstance list/dict -> Unknown narrowing issue cleanly)

BREAKING: scripts/check_us_spelling.py removed, use spelling-check command or action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ exclude_dirs = [
   "reports",
 ]
 exclude_files = [".coverage", "uv.lock"]
-include_list = true
+include_list = false
 
 [tool.ruff.lint.mccabe]
 max-complexity = 45
