--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,23 @@
 # Environment Configuration
 
-# Companies House API (required for Stage 2)
+# Companies House source selection
+# file (snapshot) or api
+CH_SOURCE_TYPE=file
+
+# Snapshot configuration (used when CH_SOURCE_TYPE=file)
+SNAPSHOT_ROOT=data/cache/snapshots
+SPONSOR_CLEAN_PATH=
+CH_CLEAN_PATH=
+CH_TOKEN_INDEX_DIR=
+CH_FILE_MAX_CANDIDATES=500
+
+# Companies House API (required only when CH_SOURCE_TYPE=api)
 # Get your key at: https://developer.company-information.service.gov.uk/
 CH_API_KEY=your_api_key_here
 
 # Rate limiting and politeness
-CH_SLEEP_SECONDS=0.5          # Delay between API requests
-CH_MAX_RPM=500                # Max requests per minute (CH limit is 600)
+CH_SLEEP_SECONDS=0.2          # Delay between API requests
+CH_MAX_RPM=600                # Max requests per minute
 CH_TIMEOUT_SECONDS=30         # HTTP timeout in seconds
 CH_MAX_RETRIES=3              # Retry attempts for transient errors
 CH_BACKOFF_FACTOR=0.5         # Exponential backoff factor
@@ -18,7 +29,7 @@ CH_BATCH_SIZE=250             # Organisations per batch (incremental output)
 
 # Matching thresholds
 CH_MIN_MATCH_SCORE=0.72       # Minimum similarity to accept a match
-CH_SEARCH_LIMIT=5             # Number of search results to consider
+CH_SEARCH_LIMIT=10            # Number of search results to consider
 
 # Stage 3 scoring
 TECH_SCORE_THRESHOLD=0.55     # Minimum tech-likelihood score for shortlist
