feat(cli): enforce file-only runtime and record milestone execution plan
- enforce file-only runtime mode for transform-enrich and run-all with explicit fail-fast CLI errors\n- remove runtime API branch wiring in CLI command flow while preserving non-runtime API support code\n- add CLI tests for rejecting CH_SOURCE_TYPE=api at runtime and align usage-shortlist run-all test setup\n- add archived API runtime reference document and update troubleshooting, README, and .env example guidance\n- promote file-only DI onboarding improvement plan and expand linear delivery plan with milestone 0 batches, tracking, and closeout notes\n- update plans index to reflect active, promoted, and archived planning documents

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Environment Configuration
 
 # Companies House source selection
-# file (snapshot) or api
+# Runtime commands support file mode only
 CH_SOURCE_TYPE=file
 
 # Snapshot configuration (used when CH_SOURCE_TYPE=file)
@@ -11,7 +11,7 @@ CH_CLEAN_PATH=
 CH_TOKEN_INDEX_DIR=
 CH_FILE_MAX_CANDIDATES=500
 
-# Companies House API (required only when CH_SOURCE_TYPE=api)
+# Companies House API (archived runtime mode reference only)
 # Get your key at: https://developer.company-information.service.gov.uk/
 CH_API_KEY=your_api_key_here
 
