feat(config): lock geographic filtering to single-region contract
Replace GEO_FILTER_REGIONS with GEO_FILTER_REGION in PipelineConfig.from_env and enforce fail-fast parsing when a comma-separated multi-value is supplied.

Add config coverage for env loading semantics: single value accepted, comma-separated values rejected, and legacy GEO_FILTER_REGIONS ignored.

Extend CLI coverage with run-all multi-region rejection to lock one-region behaviour consistently with usage-shortlist.

Align user-facing configuration docs and examples in README.md and .env.example to the singular env variable.

Update linear delivery tracking: mark R-B3 complete, record batch closeout, and set R-B4 as next batch.

Verification: uv run check

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,6 @@ CH_SEARCH_LIMIT=10            # Number of search results to consider
 # Stage 3 scoring
 TECH_SCORE_THRESHOLD=0.55     # Minimum tech-likelihood score for shortlist
 
-# Geographic filtering (optional, comma-separated)
-# GEO_FILTER_REGIONS=London,Manchester,Bristol
+# Geographic filtering (optional)
+# GEO_FILTER_REGION=London
 # GEO_FILTER_POSTCODES=EC,SW,W1
