feat: complete milestone 3 performance and scoring profile groundwork

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,8 @@ CH_SEARCH_LIMIT=10            # Number of search results to consider
 
 # Stage 3 scoring
 TECH_SCORE_THRESHOLD=0.55     # Minimum tech-likelihood score for shortlist
+SECTOR_PROFILE=               # Optional path to scoring profile catalogue JSON
+SECTOR_NAME=                  # Optional profile name within the scoring catalogue
 
 # Geographic filtering (optional)
 # GEO_FILTER_REGION=London
