feat(config): add size-filter contracts and value-story baseline

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,7 @@ SECTOR_NAME=                  # Optional profile name within the scoring catalog
 # Geographic filtering (optional)
 # GEO_FILTER_REGION=London
 # GEO_FILTER_POSTCODES=EC,SW,W1
+
+# Size filtering (optional; wired as config/CLI contract in M7-B2)
+# MIN_EMPLOYEE_COUNT=1000
+# INCLUDE_UNKNOWN_EMPLOYEE_COUNT=false
