feat(employee-count): add snapshot boundary and deterministic score join

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@
 CH_SOURCE_TYPE=file
 
 # Snapshot configuration (used when CH_SOURCE_TYPE=file)
+# transform-score/run-all also require an employee_count snapshot under:
+# data/cache/snapshots/employee_count/<YYYY-MM-DD>/{raw.csv,clean.csv,manifest.json}
 SNAPSHOT_ROOT=data/cache/snapshots
 SPONSOR_CLEAN_PATH=
 CH_CLEAN_PATH=
